--- a/exercise1/pom.xml
+++ b/exercise1/pom.xml
@@ -11,5 +11,11 @@
 
     <artifactId>exercise1</artifactId>
 
-
+    <dependencies>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>5.8.2</version>
+        </dependency>
+    </dependencies>
 </project>
